<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Search filter">

    <CheckBoxPreference
        android:key="go_back"
        android:layout="@layout/settings_toolbar" />

    <PreferenceCategory android:title="News Preferences">

        <ListPreference
            android:entries="@array/section_values"
            android:entryValues="@array/section"
            android:key="@string/section"
            android:summary="@string/all"
            android:title="@string/sections" />

        <ListPreference
            android:entries="@array/orderBy"
            android:entryValues="@array/orderBy"
            android:key="@string/order"
            android:summary="@string/default_string"
            android:title="@string/order_by" />

    </PreferenceCategory>

</PreferenceScreen>